#3115 Hide Home Page "My Datasets" Section when `cataloguing` = `false` Also fixed some minor layout issue for home page stories on mobile screen

--- a/magda-web-client/src/Components/Home/StoryBox.scss
+++ b/magda-web-client/src/Components/Home/StoryBox.scss
@@ -40,6 +40,13 @@
         }
     }
 
+    .small-screen-layout {
+        .story-title {
+            padding-top: 15px;
+            padding-left: 15px;
+        }
+    }
+
     @media (max-width: $medium) {
         .story-box-text {
             padding: 16px;
